<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayoutCL"
    android:background="@drawable/bottom_sheet_top_corners"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnDev"
            style="@style/Theme.AndroidSchoolHxHCowboys.TextButton"
            android:layout_marginTop="@dimen/normal_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_job_dev" />

        <Button
            android:id="@+id/btnTest"
            style="@style/Theme.AndroidSchoolHxHCowboys.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_job_test" />

        <Button
            android:id="@+id/btnManager"
            style="@style/Theme.AndroidSchoolHxHCowboys.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bottom_sheet_job_manager" />

        <Button
            android:id="@+id/btnOther"
            style="@style/Theme.AndroidSchoolHxHCowboys.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_200"
            android:text="@string/bottom_sheet_job_other" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>